--- a/hw_js_7/index.html
+++ b/hw_js_7/index.html
@@ -57,12 +57,12 @@
     <input id="font-size-control" type="range" />
     <br />
     <span id="text">Абракадабра!</span>
-    <!-- <script type="module" src="./js/task_1.js"></script> -->
-    <!-- <script type="module" src="./js/task_2.js"></script> -->
-    <!-- <script type="module" src="./js/task_3.js"></script> -->
-    <!-- <script type="module" src="./js/task_4.js"></script> -->
-    <!-- <script type="module" src="./js/task_5.js"></script> -->
-    <!-- <script type="module" src="./js/task_6.js"></script> -->
-    <!-- <script type="module" src="./js/task_7.js"></script> -->
+    <script type="module" src="./js/task_1.js"></script>
+    <script type="module" src="./js/task_2.js"></script>
+    <script type="module" src="./js/task_3.js"></script>
+    <script type="module" src="./js/task_4.js"></script>
+    <script type="module" src="./js/task_5.js"></script>
+    <script type="module" src="./js/task_6.js"></script>
+    <script type="module" src="./js/task_7.js"></script>
   </body>
 </html>
