--- a/hw_js_7/index.html
+++ b/hw_js_7/index.html
@@ -57,6 +57,7 @@
     <input id="font-size-control" type="range" />
     <br />
     <span id="text">Абракадабра!</span>
+    <ul id="ingredients"></ul>
     <script type="module" src="./js/task_1.js"></script>
     <script type="module" src="./js/task_2.js"></script>
     <script type="module" src="./js/task_3.js"></script>
