--- a/hw_js_11-change-color/index.html
+++ b/hw_js_11-change-color/index.html
@@ -9,6 +9,6 @@
 <body>
     <button type="button" data-action="start">Start</button>
     <button type="button" data-action="stop">Stop</button>
-    <script type="module" src="./Color switcher/task_1.js"></script>
+    <script type="module" src="./Color-switcher/task_1.js"></script>
 </body>
 </html>
