--- a/hw_js_13/src/index.html
+++ b/hw_js_13/src/index.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hw_13_js</title>
-    <link rel="stylesheet" href="./styles.css">
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <title>hw_13_js</title>
   </head>
   <body>
     <form class="search-form" id="search-form">
       <input
+      class="style-input"
         type="text"
         name="query"
         autocomplete="off"
-        placeholder="Search images..."
+        placeholder=" Search images..."
       />
-      <ul class="gallery">
-        <!-- Список <li> с карточками изображений -->
-      </ul>
     </form>
+    <ul class="gallery"></ul>
+    <button class="button" type="submit">
+      Load More
+    </button>
   </body>
 </html>
